--- a/App.VecinosUY/app/src/main/res/layout/activity_login.xml
+++ b/App.VecinosUY/app/src/main/res/layout/activity_login.xml
@@ -23,12 +23,10 @@
             android:textSize="24.5sp" android:text="@string/ingrese_codigo_de_activacion" />
         <EditText
 
-            android:id="@+id/editText"
+            android:id="@+id/passwordTxt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-        />
-        <Button android:layout_height="wrap_content" android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button android:id="@+id/entrarBtn" android:layout_height="wrap_content" android:layout_width="wrap_content"
             android:layout_gravity="center" android:layout_marginBottom="25dip"
             android:textSize="24.5sp" android:text="@string/entrar" />
     </LinearLayout>
