--- a/App.VecinosUY/app/src/main/res/layout/activity_login.xml
+++ b/App.VecinosUY/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,8 @@
         <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
             android:layout_gravity="center" android:layout_marginBottom="25dip"
             android:textSize="24.5sp" android:text="@string/bienvenido" />
-        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
+        <TextView android:id="@+id/userMessage"
+            android:layout_height="wrap_content" android:layout_width="wrap_content"
             android:layout_gravity="center" android:layout_marginBottom="25dip"
             android:textSize="24.5sp" android:text="@string/ingrese_codigo_de_activacion" />
         <EditText
