notificaciones, favoritos y sql lite del lado de android

--- a/App.VecinosUY/app/src/main/res/layout/activity_announcement_form.xml
+++ b/App.VecinosUY/app/src/main/res/layout/activity_announcement_form.xml
@@ -37,6 +37,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
+        <CheckBox android:id="@+id/checkbox_fav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Favorito"
+            android:onClick="onCheckboxClicked"/>
 
         <Button android:id="@+id/submitBtn" android:layout_height="wrap_content" android:layout_width="wrap_content"
             android:layout_gravity="center" android:layout_marginBottom="25dip"
