--- a/App.VecinosUY/app/src/main/res/layout/activity_main.xml
+++ b/App.VecinosUY/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:fillViewport="false">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/fondo" android:layout_height="fill_parent"
     android:layout_width="fill_parent" android:padding="30dip"
@@ -19,6 +25,9 @@
         <Button android:id="@+id/announcementsBtn" android:layout_height="wrap_content" android:layout_width="300dip"
             android:layout_gravity="center" android:layout_marginBottom="15dip"
             android:textSize="24.5sp" android:text="@string/annauncement" />
+        <Button android:id="@+id/accountStateBtn" android:layout_height="wrap_content" android:layout_width="300dip"
+            android:layout_gravity="center" android:layout_marginBottom="15dip"
+            android:textSize="24.5sp" android:text="Estado de cuenta" />
         <Button android:id="@+id/mtngsBtn" android:layout_height="wrap_content" android:layout_width="300dip"
             android:layout_gravity="center" android:layout_marginBottom="15dip"
             android:textSize="24.5sp" android:text="@string/meeting" />
@@ -33,3 +42,4 @@
             android:textSize="24.5sp" android:text="@string/agenda" />
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
