--- a/App.VecinosUY/app/src/main/res/layout/activity_meeting.xml
+++ b/App.VecinosUY/app/src/main/res/layout/activity_meeting.xml
@@ -1,42 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="edu.ort.vecinosuy.MeetingActivity">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@color/fondo" android:layout_height="fill_parent"
-        android:layout_width="fill_parent" android:padding="30dip"
-        android:orientation="horizontal">
-    <LinearLayout android:orientation="vertical"
-        android:layout_height="wrap_content" android:layout_width="fill_parent"
-        android:layout_gravity="center">
-        <TextView android:id="@+id/labelAnnForm"
-            android:layout_height="wrap_content" android:layout_width="wrap_content"
-            android:layout_gravity="center" android:layout_marginBottom="25dip"
-            android:textSize="24.5sp"  android:text="Nueva reunion:" />
-        <EditText
 
-            android:id="@+id/meetingTitle"
-            android:layout_width="match_parent"
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addMeetingBtn"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Asunto"/>
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:srcCompat="@android:drawable/ic_input_add" />
 
+        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/meetingListView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-        <Button android:id="@+id/meetingTimeBtn" android:layout_height="wrap_content" android:layout_width="wrap_content"
-            android:layout_gravity="center" android:layout_marginBottom="25dip"
-            android:textSize="24.5sp" android:text="Seleccionar hora" />
-
-        <Button android:id="@+id/meetingDateBtn" android:layout_height="wrap_content" android:layout_width="wrap_content"
-            android:layout_gravity="center" android:layout_marginBottom="25dip"
-            android:textSize="24.5sp" android:text="Seleccionar fecha" />
-
-        <Button android:id="@+id/scheduleMeetingBtn" android:layout_height="wrap_content" android:layout_width="wrap_content"
-            android:layout_gravity="center" android:layout_marginBottom="25dip"
-            android:textSize="24.5sp" android:text="Agendar" />
-
-        </LinearLayout>>
-    </LinearLayout>>
-
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
