--- a/App.VecinosUY/app/src/main/res/layout/activity_announcement.xml
+++ b/App.VecinosUY/app/src/main/res/layout/activity_announcement.xml
@@ -13,11 +13,21 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
+            android:backgroundTint="#FFD74A"
+            app:borderWidth="0dp"
+            app:rippleColor="#000066"
+            android:tint="#000066"
             app:srcCompat="@android:drawable/ic_input_add" />
 
         <ListView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/listview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:textColor="#000066"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            />
 
 </android.support.design.widget.CoordinatorLayout>
